# ensc429_project

./: .gitignore  CMakeLists.txt  README.md  ensc429_project.sln
cmake/: FindPortAudio.cmake
dsp/: dsp.cpp  dsp.h
ensc429_project-test/: .gitignore  CMakeLists.txt  README.md  SETUP.md  build.bat  build.ps1  clean.bat  clean.ps1  diagnose.ps1  setup.bat  setup.ps1
ensc429_project-test/cmake/: test_windows_sdk.cpp
ensc429_project-test/gui/: Program.cs
ensc429_project-test/src/: main.cpp
ensc429_project-test/src/audio/: microphone.cpp
ensc429_project-test/src/dsp/: BANDPASS_coeff.cpp  BANDPASS_coeff.hpp  FIRDesign.hpp  FIR_coeff.cpp  FIR_coeff.hpp  dsp.cpp  dsp.hpp  effect.hpp
ensc429_project-test/src/rtos/: task.cpp  task.hpp
portaudio/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/audio/: audio_buffer.cpp  audio_buffer.hpp  microphone.cpp  microphone.hpp  speaker.cpp  speaker.hpp
src/dsp/: dsp.cpp  dsp.hpp
src/rtos/: scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
